--- a/404.html
+++ b/404.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html><html lang="zh-CN" data-theme="light"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>页面没有找到 | yiin</title><meta name="keywords" content="关键字"><meta name="author" content="一饮"><meta name="copyright" content="一饮"><meta name="format-detection" content="telephone=no"><meta name="theme-color" content="#ffffff"><meta name="description" content="一饮">
-<meta property="og:type" content="website">
+<!DOCTYPE html><html lang="zh-CN" data-theme="light"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>页面没有找到 | yiin</title><meta name="keywords" content="关键字"><meta name="author" content="一饮"><meta name="copyright" content="一饮"><meta name="format-detection" content="telephone=no"><meta name="theme-color" content="#ffffff"><meta property="og:type" content="website">
 <meta property="og:title" content="yiin">
 <meta property="og:url" content="https://yiin1.github.io/404.html">
 <meta property="og:site_name" content="yiin">
-<meta property="og:description" content="一饮">
 <meta property="og:locale" content="zh_CN">
 <meta property="og:image" content="https://yiin1.github.io/media/avatar.jpg">
 <meta property="article:author" content="一饮">
@@ -56,7 +54,7 @@
   isHome: false,
   isHighlightShrink: false,
   isToc: false,
-  postUpdate: '2023-01-21 20:44:27'
+  postUpdate: '2023-01-22 10:51:55'
 }</script><noscript><style type="text/css">
   #nav {
     opacity: 1
